frontend/test/should_pass/rule_empty.grg
rule r
{
	. --> .;
}

rule s
{
	alternative {
		l1 {
			.;
			modify {
				. --> .;
			}
		}
	}
}

rule t
{
	iterated {
		.;
		
		modify {
		}
	}
}
