frontend/test/should_fail/independent_009.grg
rule r
{
	independent {
        alternative {
			One {
				.;
				modify {
				}
			}
			Two {
				. -- .;
				modify {
				}
			}
        }
	}

	replace {
	}
}
